[gd_scene load_steps=2 format=3 uid="uid://xfidfn44gpc8"]

[ext_resource type="Script" uid="uid://6wo25b6qnn60" path="res://Scenes/UI/Shop/shop_menu.gd" id="1_mg8pq"]

[node name="ShopPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_mg8pq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 96.0
offset_right = 1267.0
offset_bottom = 744.0
scale = Vector2(0.8, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 674.0
offset_bottom = 90.0

[node name="Speed" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Speed" type="Label" parent="Panel/VBoxContainer/Speed"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Upgrade Speed (Level 0 ➡️ Level 1): "

[node name="SpeedUpgradeButton" type="Button" parent="Panel/VBoxContainer/Speed"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "10 Coins"

[node name="Magnet" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Magnet" type="Label" parent="Panel/VBoxContainer/Magnet"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Upgrade Magnet Radius (Level 0 ➡️ Level 1): "

[node name="MagnetUpgradeButton" type="Button" parent="Panel/VBoxContainer/Magnet"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "10 Coins"

[connection signal="pressed" from="Panel/VBoxContainer/Speed/SpeedUpgradeButton" to="." method="_on_speed_upgrade_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Magnet/MagnetUpgradeButton" to="." method="_on_magnet_upgrade_button_pressed"]
